--- a/Autoregressive Model (AR).ipynb
+++ b/Autoregressive Model (AR).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "9c5055ed",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,7 @@
     "import statsmodels.graphics.tsaplots as sgt\n",
     "from statsmodels.tsa.arima.model import ARIMA\n",
     "from statsmodels.tsa.arima_model import ARMA\n",
+    "from statsmodels.tsa.ar_model import AutoReg\n",
     "from scipy.stats.distributions import chi2\n",
     "import statsmodels.tsa.stattools as sts \n",
     "import seaborn as sns\n",
@@ -142,26 +143,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "id": "7fe119d9",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "`order` argument must be an iterable with three elements.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\DATASC~1\\AppData\\Local\\Temp/ipykernel_5148/39570906.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel_ar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mARIMA\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmarket_value\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mresults_ar\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmodel_ar\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mresults_ar\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\statsmodels\\tsa\\arima\\model.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, endog, exog, order, seasonal_order, trend, enforce_stationarity, enforce_invertibility, concentrate_scale, trend_offset, dates, freq, missing, validate_specification)\u001b[0m\n\u001b[0;32m    151\u001b[0m         \u001b[1;31m# this criteria. Instead, we'll just make sure that the parameter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    152\u001b[0m         \u001b[1;31m# estimates from those methods satisfy the criteria.)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 153\u001b[1;33m         self._spec_arima = SARIMAXSpecification(\n\u001b[0m\u001b[0;32m    154\u001b[0m             \u001b[0mendog\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexog\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mexog\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0morder\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mseasonal_order\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mseasonal_order\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    155\u001b[0m             \u001b[0mtrend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtrend\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menforce_stationarity\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menforce_invertibility\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\statsmodels\\tsa\\arima\\specification.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, endog, exog, order, seasonal_order, ar_order, diff, ma_order, seasonal_ar_order, seasonal_diff, seasonal_ma_order, seasonal_periods, trend, enforce_stationarity, enforce_invertibility, concentrate_scale, trend_offset, dates, freq, missing, validate_specification)\u001b[0m\n\u001b[0;32m    265\u001b[0m         \u001b[1;31m# Validate shapes of `order`, `seasonal_order`\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    266\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0morder\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 267\u001b[1;33m             raise ValueError('`order` argument must be an iterable with three'\n\u001b[0m\u001b[0;32m    268\u001b[0m                              ' elements.')\n\u001b[0;32m    269\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseasonal_order\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: `order` argument must be an iterable with three elements."
-     ]
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>SARIMAX Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>     <td>market_value</td>   <th>  No. Observations:  </th>    <td>5020</td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>            <td>ARIMA(1, 0, 0)</td>  <th>  Log Likelihood     </th> <td>-27617.602</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>            <td>Wed, 10 Nov 2021</td> <th>  AIC                </th>  <td>55241.203</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                <td>13:15:39</td>     <th>  BIC                </th>  <td>55260.767</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Sample:</th>             <td>01-10-1994</td>    <th>  HQIC               </th>  <td>55248.059</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th></th>                   <td>- 04-05-2013</td>   <th>                     </th>      <td> </td>    \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>        <td>opg</td>       <th>                     </th>      <td> </td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "     <td></td>       <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th>  <td> 5089.9648</td> <td>  423.029</td> <td>   12.032</td> <td> 0.000</td> <td> 4260.843</td> <td> 5919.087</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ar.L1</th>  <td>    0.9984</td> <td>    0.001</td> <td> 1148.981</td> <td> 0.000</td> <td>    0.997</td> <td>    1.000</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>sigma2</th> <td> 3512.0777</td> <td>   40.891</td> <td>   85.889</td> <td> 0.000</td> <td> 3431.933</td> <td> 3592.222</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Ljung-Box (L1) (Q):</th>     <td>1.49</td> <th>  Jarque-Bera (JB):  </th> <td>3310.47</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Q):</th>                <td>0.22</td> <th>  Prob(JB):          </th>  <td>0.00</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Heteroskedasticity (H):</th> <td>1.90</td> <th>  Skew:              </th>  <td>-0.18</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(H) (two-sided):</th>    <td>0.00</td> <th>  Kurtosis:          </th>  <td>6.96</td>  \n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Covariance matrix calculated using the outer product of gradients (complex-step)."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                               SARIMAX Results                                \n",
+       "==============================================================================\n",
+       "Dep. Variable:           market_value   No. Observations:                 5020\n",
+       "Model:                 ARIMA(1, 0, 0)   Log Likelihood              -27617.602\n",
+       "Date:                Wed, 10 Nov 2021   AIC                          55241.203\n",
+       "Time:                        13:15:39   BIC                          55260.767\n",
+       "Sample:                    01-10-1994   HQIC                         55248.059\n",
+       "                         - 04-05-2013                                         \n",
+       "Covariance Type:                  opg                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "const       5089.9648    423.029     12.032      0.000    4260.843    5919.087\n",
+       "ar.L1          0.9984      0.001   1148.981      0.000       0.997       1.000\n",
+       "sigma2      3512.0777     40.891     85.889      0.000    3431.933    3592.222\n",
+       "===================================================================================\n",
+       "Ljung-Box (L1) (Q):                   1.49   Jarque-Bera (JB):              3310.47\n",
+       "Prob(Q):                              0.22   Prob(JB):                         0.00\n",
+       "Heteroskedasticity (H):               1.90   Skew:                            -0.18\n",
+       "Prob(H) (two-sided):                  0.00   Kurtosis:                         6.96\n",
+       "===================================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_ar = ARIMA(df.market_value, order=(1,0))\n",
+    "model_ar = ARIMA(df.market_value, order=(1,0,0))\n",
     "results_ar=model_ar.fit()\n",
     "results_ar.summary()"
    ]
