The GARCH Model

--- a/THE ARCH Model/Section 11 - The ARCH Model - Template.ipynb
+++ b/THE ARCH Model/Section 11 - The ARCH Model - Template.ipynb
@@ -873,14 +873,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration:      5,   Func. Count:     89,   Neg. LLF: 10011.775468928608\n",
+      "Iteration:     10,   Func. Count:    179,   Neg. LLF: 7470.895326223472\n",
+      "Iteration:     15,   Func. Count:    269,   Neg. LLF: 7087.895295199729\n",
+      "Iteration:     20,   Func. Count:    359,   Neg. LLF: 7070.0344687053785\n",
+      "Iteration:     25,   Func. Count:    444,   Neg. LLF: 6984.175063672459\n",
+      "Optimization terminated successfully    (Exit mode 0)\n",
+      "            Current function value: 6984.175062617\n",
+      "            Iterations: 27\n",
+      "            Function evaluations: 475\n",
+      "            Gradient evaluations: 27\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Constant Mean - ARCH Model Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>       <td>returns</td>      <th>  R-squared:         </th>  <td>   0.000</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Mean Model:</th>       <td>Constant Mean</td>   <th>  Adj. R-squared:    </th>  <td>   0.000</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Vol Model:</th>            <td>ARCH</td>        <th>  Log-Likelihood:    </th> <td>  -6984.18</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Distribution:</th>        <td>Normal</td>       <th>  AIC:               </th> <td>   13998.4</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>        <td>Maximum Likelihood</td> <th>  BIC:               </th> <td>   14096.2</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th></th>                        <td></td>          <th>  No. Observations:  </th>    <td>5020</td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>           <td>Thu, Nov 11 2021</td>  <th>  Df Residuals:      </th>    <td>5019</td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>               <td>14:48:04</td>      <th>  Df Model:          </th>      <td>1</td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<caption>Mean Model</caption>\n",
+       "<tr>\n",
+       "   <td></td>     <th>coef</th>     <th>std err</th>      <th>t</th>       <th>P>|t|</th>     <th>95.0% Conf. Int.</th>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>mu</th> <td>    0.0492</td> <td>1.206e-02</td> <td>    4.077</td> <td>4.566e-05</td> <td>[2.553e-02,7.281e-02]</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<caption>Volatility Model</caption>\n",
+       "<tr>\n",
+       "      <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>       <th>P>|t|</th>      <th>95.0% Conf. Int.</th>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>omega</th>     <td>    0.1871</td> <td>2.210e-02</td> <td>    8.466</td> <td>2.538e-17</td>    <td>[  0.144,  0.230]</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[1]</th>  <td>    0.0568</td> <td>1.729e-02</td> <td>    3.282</td> <td>1.029e-03</td>  <td>[2.287e-02,9.065e-02]</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[2]</th>  <td>    0.1156</td> <td>2.017e-02</td> <td>    5.733</td> <td>9.840e-09</td>   <td>[7.610e-02,  0.155]</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[3]</th>  <td>    0.1265</td> <td>2.625e-02</td> <td>    4.820</td> <td>1.433e-06</td>   <td>[7.509e-02,  0.178]</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[4]</th>  <td>    0.0884</td> <td>2.159e-02</td> <td>    4.093</td> <td>4.265e-05</td>   <td>[4.605e-02,  0.131]</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[5]</th>  <td>    0.0695</td> <td>1.750e-02</td> <td>    3.970</td> <td>7.189e-05</td>   <td>[3.518e-02,  0.104]</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[6]</th>  <td>    0.0865</td> <td>1.926e-02</td> <td>    4.491</td> <td>7.092e-06</td>   <td>[4.874e-02,  0.124]</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[7]</th>  <td>    0.0404</td> <td>1.846e-02</td> <td>    2.188</td> <td>2.870e-02</td>  <td>[4.203e-03,7.658e-02]</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[8]</th>  <td>    0.0654</td> <td>1.833e-02</td> <td>    3.565</td> <td>3.633e-04</td>   <td>[2.943e-02,  0.101]</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[9]</th>  <td>    0.0292</td> <td>1.603e-02</td> <td>    1.820</td> <td>6.877e-02</td> <td>[-2.244e-03,6.058e-02]</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[10]</th> <td>    0.0335</td> <td>1.605e-02</td> <td>    2.089</td> <td>3.670e-02</td>  <td>[2.072e-03,6.498e-02]</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[11]</th> <td>    0.0775</td> <td>1.760e-02</td> <td>    4.403</td> <td>1.067e-05</td>   <td>[4.300e-02,  0.112]</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[12]</th> <td>    0.0473</td> <td>1.873e-02</td> <td>    2.526</td> <td>1.153e-02</td>  <td>[1.060e-02,8.402e-02]</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>alpha[13]</th> <td>    0.0372</td> <td>1.431e-02</td> <td>    2.600</td> <td>9.317e-03</td>  <td>[9.162e-03,6.526e-02]</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Covariance estimator: robust"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                      Constant Mean - ARCH Model Results                      \n",
+       "==============================================================================\n",
+       "Dep. Variable:                returns   R-squared:                       0.000\n",
+       "Mean Model:             Constant Mean   Adj. R-squared:                  0.000\n",
+       "Vol Model:                       ARCH   Log-Likelihood:               -6984.18\n",
+       "Distribution:                  Normal   AIC:                           13998.4\n",
+       "Method:            Maximum Likelihood   BIC:                           14096.2\n",
+       "                                        No. Observations:                 5020\n",
+       "Date:                Thu, Nov 11 2021   Df Residuals:                     5019\n",
+       "Time:                        14:48:04   Df Model:                            1\n",
+       "                                 Mean Model                                 \n",
+       "============================================================================\n",
+       "                 coef    std err          t      P>|t|      95.0% Conf. Int.\n",
+       "----------------------------------------------------------------------------\n",
+       "mu             0.0492  1.206e-02      4.077  4.566e-05 [2.553e-02,7.281e-02]\n",
+       "                               Volatility Model                              \n",
+       "=============================================================================\n",
+       "                 coef    std err          t      P>|t|       95.0% Conf. Int.\n",
+       "-----------------------------------------------------------------------------\n",
+       "omega          0.1871  2.210e-02      8.466  2.538e-17      [  0.144,  0.230]\n",
+       "alpha[1]       0.0568  1.729e-02      3.282  1.029e-03  [2.287e-02,9.065e-02]\n",
+       "alpha[2]       0.1156  2.017e-02      5.733  9.840e-09    [7.610e-02,  0.155]\n",
+       "alpha[3]       0.1265  2.625e-02      4.820  1.433e-06    [7.509e-02,  0.178]\n",
+       "alpha[4]       0.0884  2.159e-02      4.093  4.265e-05    [4.605e-02,  0.131]\n",
+       "alpha[5]       0.0695  1.750e-02      3.970  7.189e-05    [3.518e-02,  0.104]\n",
+       "alpha[6]       0.0865  1.926e-02      4.491  7.092e-06    [4.874e-02,  0.124]\n",
+       "alpha[7]       0.0404  1.846e-02      2.188  2.870e-02  [4.203e-03,7.658e-02]\n",
+       "alpha[8]       0.0654  1.833e-02      3.565  3.633e-04    [2.943e-02,  0.101]\n",
+       "alpha[9]       0.0292  1.603e-02      1.820  6.877e-02 [-2.244e-03,6.058e-02]\n",
+       "alpha[10]      0.0335  1.605e-02      2.089  3.670e-02  [2.072e-03,6.498e-02]\n",
+       "alpha[11]      0.0775  1.760e-02      4.403  1.067e-05    [4.300e-02,  0.112]\n",
+       "alpha[12]      0.0473  1.873e-02      2.526  1.153e-02  [1.060e-02,8.402e-02]\n",
+       "alpha[13]      0.0372  1.431e-02      2.600  9.317e-03  [9.162e-03,6.526e-02]\n",
+       "=============================================================================\n",
+       "\n",
+       "Covariance estimator: robust\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_arch_13 = arch_model(df.returns[1:], mean = \"Constant\", vol = \"ARCH\", p = 13)\n",
     "results_arch_13 = model_arch_13.fit(update_freq = 5)\n",
     "results_arch_13.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
