Predict Pump Failure Before It Happens Using Deep Learning Model

--- a/Anomaly Detection for Pump Sensor Data/Predictive Maintenance on Pump Sensor Data (1).ipynb
+++ b/Anomaly Detection for Pump Sensor Data/Predictive Maintenance on Pump Sensor Data (1).ipynb
@@ -109,7 +109,18 @@
    "execution_count": 3,
    "id": "a1fd7076",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.4SP5SUA7CBGXUEOC35YP2ASOICYYEQZZ.gfortran-win_amd64.dll\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the necessary library\n",
     "import os\n",
@@ -2655,7 +2666,9 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "5d9d38f4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2728,6 +2741,102 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "50a1c835",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(219521, 52)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tidy.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9f808c17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sensor_00         0\n",
+       "sensor_01         0\n",
+       "sensor_02         0\n",
+       "sensor_03         0\n",
+       "sensor_04         0\n",
+       "sensor_05         0\n",
+       "sensor_06         0\n",
+       "sensor_07         0\n",
+       "sensor_08         0\n",
+       "sensor_09         0\n",
+       "sensor_10         0\n",
+       "sensor_11         0\n",
+       "sensor_12         0\n",
+       "sensor_13         0\n",
+       "sensor_14         0\n",
+       "sensor_16         0\n",
+       "sensor_17         0\n",
+       "sensor_18         0\n",
+       "sensor_19         0\n",
+       "sensor_20         0\n",
+       "sensor_21         0\n",
+       "sensor_22         0\n",
+       "sensor_23         0\n",
+       "sensor_24         0\n",
+       "sensor_25         0\n",
+       "sensor_26         0\n",
+       "sensor_27         0\n",
+       "sensor_28         0\n",
+       "sensor_29         0\n",
+       "sensor_30         0\n",
+       "sensor_31         0\n",
+       "sensor_32         0\n",
+       "sensor_33         0\n",
+       "sensor_34         0\n",
+       "sensor_35         0\n",
+       "sensor_36         0\n",
+       "sensor_37         0\n",
+       "sensor_38         0\n",
+       "sensor_39         0\n",
+       "sensor_40         0\n",
+       "sensor_41         0\n",
+       "sensor_42         0\n",
+       "sensor_43         0\n",
+       "sensor_44         0\n",
+       "sensor_45         0\n",
+       "sensor_46         0\n",
+       "sensor_47         0\n",
+       "sensor_48         0\n",
+       "sensor_49         0\n",
+       "sensor_50         0\n",
+       "sensor_51         0\n",
+       "machine_status    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tidy.isna().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9dfa2e8b",
    "metadata": {},
@@ -2740,7 +2849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "e25ed5e5",
    "metadata": {},
    "outputs": [],
