--- a/Anomaly Detection Examples/Accurate Anomaly Detection Based on Copulas (COPOD)/Anomaly Detection Using (COPOD).ipynb
+++ b/Anomaly Detection Examples/Accurate Anomaly Detection Based on Copulas (COPOD)/Anomaly Detection Using (COPOD).ipynb
@@ -73,6 +73,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "68bf3bb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "184508b5",
    "metadata": {},
@@ -487,9 +497,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gpu2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "gpu2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -501,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
