--- a/Anomaly Detection Examples/Isolation Forest with SHAP/isolationForest_using_shap.ipynb
+++ b/Anomaly Detection Examples/Isolation Forest with SHAP/isolationForest_using_shap.ipynb
@@ -708,7 +708,7 @@
    "hash": "8931ca67e55eb2504d350e8273275826e7b772a1dc834a27a0a91cd32fb53525"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('gpu': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -723,8 +723,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
